refactor: update run_precompute workflow to push generated database files to Hugging Face

--- a/.github/workflows/run_precompute.yml
+++ b/.github/workflows/run_precompute.yml
@@ -39,41 +39,26 @@ jobs:
           ls -lh db || echo "⚠️ db folder missing!"
 
       # --- Step 5: Push to Hugging Face Space ---
-      - name: Push updated FAISS index to Hugging Face
+      - name: Push generated database to Hugging Face
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           python - <<'EOF'
+          from huggingface_hub import HfApi, upload_file
           import os
-          from huggingface_hub import HfApi, upload_folder
-
+      
+          api = HfApi(token=os.environ["HF_TOKEN"])
           repo_id = "akanshajain231999/EvalAI-Chatbot"
           folder_path = "db"
-          token = os.environ["HF_TOKEN"]
-
-          api = HfApi(token=token)
-
-          print(f"🧹 Deleting old 'db/' folder from Space repo: {repo_id}")
-          try:
-              api.delete_folder(repo_id=repo_id, path_in_repo="db", repo_type="space")
-              print("✅ Old folder deleted.")
-          except Exception as e:
-              print("ℹ️ No existing folder found or already clean:", e)
-
-          print(f"⬆️ Uploading new FAISS database from {folder_path}/ ...")
-          upload_folder(
-              folder_path=folder_path,
-              repo_id=repo_id,
-              repo_type="space",
-              commit_message="🔄 Auto-update FAISS database via GitHub Actions",
-              allow_patterns="*",
-          )
-          print("✅ Upload complete!")
-
-          # Verify files now exist in the repo
-          files = api.list_repo_files(repo_id=repo_id, repo_type="space")
-          print("📂 Files now in Space repo under /db:")
-          for f in files:
-              if f.startswith("db/"):
-                  print(" -", f)
+      
+          print(f"⬆️ Uploading files from {folder_path} to Hugging Face Space {repo_id} under /db/")
+          for fname in os.listdir(folder_path):
+              file_path = os.path.join(folder_path, fname)
+              api.upload_file(
+                  path_or_fileobj=file_path,
+                  path_in_repo=f"db/{fname}",
+                  repo_id=repo_id,
+                  repo_type="space"
+              )
+              print(f"✅ Uploaded {fname} → /db/{fname}")
           EOF
